code_example.txt
 import pandas as pd
>>> df = pd.read_csv("DIARIOD.csv",sep=',')
>>> df = df.iloc[:, 1:]
>>> df.head(6)

CUT BY PERIOD
>>> import pandas as pd
>>> import pprint as pp
>>> import datetime
>>> df ? pd.read_csv("DIARIOD.csv",sep=",")
  File "<stdin>", line 1
    df ? pd.read_csv("DIARIOD.csv",sep=",")
       ^
SyntaxError: invalid syntax
>>> df = pd.read_csv("DIARIOD.csv",sep=",")
>>> df.drop(columns=["PERI"])


>>> df = df.drop(columns=["PERI"])
>>> parser = lambda date: date[:-4]+date[-2:]
>>> df.iloc(0,0)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: __call__() takes from 1 to 2 positional arguments but 3 were given
>>> df.iloc(1,1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: __call__() takes from 1 to 2 positional arguments but 3 were given
>>> df.iloc(1)
<pandas.core.indexing._iLocIndexer object at 0x7f21f8e2fdb0>
>>> df.iloc[0,0]
'05/01/2004'
>>> parser(df.iloc[0,0])
'05/01/04'
>>> df.loc[df["FECASI"].str.contains("\d\d\/"+"01" +"/\d\d",regex=True)]

#SLICE BY "HABER" AND "DEBE":
dfHaber = df.loc[df["MONMN"] < 0]
dfDebe =  df.loc[df["MONMN"] > 0]


import pandas
import os
import openpyxl#implicito

